most recent render with recent edits

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -740,8 +740,8 @@ intervals.}
 
 \end{figure}%
 
-\subsection*{Exploitation status}\label{exploitation-status}
-\addcontentsline{toc}{subsection}{Exploitation status}
+\subsection*{Exploitation Status}\label{exploitation-status}
+\addcontentsline{toc}{subsection}{Exploitation Status}
 
 This assessment estimates that the stock of Yelloweye Rockfish off the
 continental U.S. Pacific Coast is currently at 40.1\% of its unexploited
@@ -804,15 +804,15 @@ Year & (1-SPR)/(1-SPR50\%) & Lower Interval (SPR) & Upper Interval (SPR) & Explo
 
 \endgroup
 
-\subsection*{Ecosystem considerations}\label{ecosystem-considerations}
-\addcontentsline{toc}{subsection}{Ecosystem considerations}
+\subsection*{Ecosystem Considerations}\label{ecosystem-considerations}
+\addcontentsline{toc}{subsection}{Ecosystem Considerations}
 
 No ecosystem or environmental data was used in the previous Yelloweye
 Rockfish assessment and no new data were considered for this update
 assessment.
 
-\subsection*{Reference points}\label{reference-points}
-\addcontentsline{toc}{subsection}{Reference points}
+\subsection*{Reference Points}\label{reference-points}
+\addcontentsline{toc}{subsection}{Reference Points}
 
 A list of estimates of the current state of the population, as well as
 reference points based on 1) a target unfished spawning output of 40\%,
@@ -872,8 +872,8 @@ MSY (mt) & 128 & 113 & 143 \\
 
 \clearpage
 
-\subsection*{Management performance}\label{management-performance}
-\addcontentsline{toc}{subsection}{Management performance}
+\subsection*{Management Performance}\label{management-performance}
+\addcontentsline{toc}{subsection}{Management Performance}
 
 Recent trends in total catch relative to management guidelines is
 available in Table~\ref{tbl-es-management} and shows that total catch of
@@ -914,8 +914,8 @@ Year & OFL (mt) & ABC (mt) & ACL (mt) & Catch (mt) \\
 
 \endgroup
 
-\subsection*{Harvest projections}\label{harvest-projections}
-\addcontentsline{toc}{subsection}{Harvest projections}
+\subsection*{Harvest Projections}\label{harvest-projections}
+\addcontentsline{toc}{subsection}{Harvest Projections}
 
 This section will be updated after SSC GFSC review.
 
@@ -959,8 +959,8 @@ Year & Adopted OFL (mt) & Adopted ACL (mt) & Assumed Catch (mt) & OFL (mt) & Buf
 
 \clearpage
 
-\subsection*{Decision table}\label{decision-table}
-\addcontentsline{toc}{subsection}{Decision table}
+\subsection*{Decision Table}\label{decision-table}
+\addcontentsline{toc}{subsection}{Decision Table}
 
 This section will be updated after SSC GFSC review.
 
@@ -1005,8 +1005,8 @@ Mgmt & Year & Catch & Low Spawn & Low Frac & Base Spawn & Base Frac & High Spawn
 
 \end{table}%
 
-\subsection*{Scientific uncertainty}\label{scientific-uncertainty}
-\addcontentsline{toc}{subsection}{Scientific uncertainty}
+\subsection*{Scientific Uncertainty}\label{scientific-uncertainty}
+\addcontentsline{toc}{subsection}{Scientific Uncertainty}
 
 The model estimate of the log-scale standard deviation of the 2025
 spawning output is 0.0996. The model estimate of the log-scale standard
@@ -1017,8 +1017,8 @@ recruitment variance) and also because there is no explicit
 incorporation of model structural uncertainty (although see the decision
 table for alternative states of nature).
 
-\subsection*{Research and data needs}\label{research-and-data-needs}
-\addcontentsline{toc}{subsection}{Research and data needs}
+\subsection*{Research and Data Needs}\label{research-and-data-needs}
+\addcontentsline{toc}{subsection}{Research and Data Needs}
 
 Please refer to the 2017 benchmark assessment for a detailed list of
 research and data needs for Yelloweye Rockfish (Gertseva and Cope
@@ -1041,8 +1041,8 @@ population:
   Explore potential indices of abundance in untrawlable areas.
 \end{itemize}
 
-\subsection*{Rebuilding projections}\label{rebuilding-projections}
-\addcontentsline{toc}{subsection}{Rebuilding projections}
+\subsection*{Rebuilding Projections}\label{rebuilding-projections}
+\addcontentsline{toc}{subsection}{Rebuilding Projections}
 
 This section will be updated after SSC GFSC review.
 
@@ -1104,13 +1104,13 @@ This section is not required for an update assessment; please refer to
 the most recent full assessment (Gertseva and Cope 2017) for additional
 information.
 
-\subsection{Ecosystem considerations}\label{ecosystem-considerations-1}
+\subsection{Ecosystem Considerations}\label{ecosystem-considerations-1}
 
 This section is not required for an update assessment; please refer to
 the most recent full assessment (Gertseva and Cope 2017) for additional
 information.
 
-\subsection{Fishery description}\label{fishery-description}
+\subsection{Fishery Description}\label{fishery-description}
 
 This section is not required for an update assessment; please refer to
 the most recent full assessment (Gertseva and Cope 2017) for additional
@@ -1127,7 +1127,7 @@ This section is not required for an update assessment; please refer to
 the most recent full assessment (Gertseva and Cope 2017) and
 Section~\ref{sec-mgmt} for additional information.
 
-\subsection{Management performance}\label{sec-mgmt}
+\subsection{Management Performance}\label{sec-mgmt}
 
 Yelloweye Rockfish removals have been substantially reduced since its
 designation as overfished in 2002 through a variety of management
@@ -1433,7 +1433,7 @@ Additionally, years with extremely low sample sizes (\textless{} 50)
 were excluded. Finally, drifts on charters from Port Orford were removed
 due to small sample sizes. The final filtered data set included 6,839
 trips with a 6.1\% encounter rate for Yelloweye Rockfish
-Table~\ref{tbl-yelloweye_percent_pos_ORFS}.
+(Table~\ref{tbl-yelloweye_percent_pos_ORFS}).
 
 Covariates evaluated included year, month, port, the open depths to
 fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of
@@ -1441,17 +1441,17 @@ drift covariate. This is in contrast to the 2017 index, which was only
 able to evaluate a year covariate. The covariates listed above are
 standard to evaluate for this index in other assessments. Negative
 binomial models were fit using \gls{sdmtmb} version 0.6.0 (Anderson et
-al. 2024)) to the drift-level data (catch with a log offset for adjusted
+al. 2024) to the drift-level data (catch with a log offset for adjusted
 angler hours). A model without the open fishing depths or month was
 selected as the best fit model by AIC
-Table~\ref{tbl-yelloweye_model_selection_ORFS}. Acceptable diagnostics
+(Table~\ref{tbl-yelloweye_model_selection_ORFS}). Acceptable diagnostics
 for the model were achieved, as evidenced by passing the sanity function
 in \gls{sdmtmb} (Figure~\ref{fig-orfs_qqplot}). The index of abundance
 is shown in Figure~\ref{fig-ORFS_index}. A comparison to the ORFS index
 used in the previous assessment indicates that despite the change in
 modeling approach and the covariates included, most years overlap
 between the two indices and similar trends are observed
-Figure~\ref{fig-ORFS_comp}. The updated index has reduced within-year
+(Figure~\ref{fig-ORFS_comp}). The updated index has reduced within-year
 variance and a lack of extreme swings in the standardized index value
 (e.g.~2013) relative to the index from 2017.
 
@@ -1483,24 +1483,24 @@ filter in the updated index. This filter has not been used for several
 assessment cycles, based on a recommendation from NWFSC staff (pers.
 comm. A. Whitman, ODFW). The final dataset included 133,039 trips from
 2004 -- 2024 with an overall encounter rate of 7.4\%
-Table~\ref{tbl-yelloweye_percent_pos_ORBS}.
+(Table~\ref{tbl-yelloweye_percent_pos_ORBS}).
 
 Covariates evaluated included year, month, port, the open depths to
 fishing (all depths or inside 20/30/40 fm), and boat type. These are the
 same covariates evaluated in the 2017 \gls{orbs} index, apart from the
 open depths of the fishery. The final model in 2017 included boat type,
-port and year. Negative binomial models were fit in \gls{sdmtmb}
+port, and year. Negative binomial models were fit in \gls{sdmtmb}
 (Version 0.6.0) to the trip-level data (catch with a log offset for
 adjusted angler hours). The final model selected includes year, month,
 port, boat type and open fishery depths, which was the best fit model by
-AIC in this series Table~\ref{tbl-yelloweye_model_selection_ORBS}.
+AIC in this series (Table~\ref{tbl-yelloweye_model_selection_ORBS}).
 Acceptable diagnostics for the model were achieved, as evidenced by
 passing the sanity function in \gls{sdmtmb} (Figure~\ref{fig-orbs_qq}).
 The index of abundance in shown in Figure~\ref{fig-ORBS_index}. ODFW no
 longer maintains the deltaGLM code that was used to develop the 2017
 index and so the index was updated to use the currently accepted
 modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb},
-version 0.6.0; Anderson et al. (2024)). To bridge this change, the 2017
+version 0.6.0) (Anderson et al. 2024). To bridge this change, the 2017
 model index structure was applied to the current data set using
 \gls{sdmtmb} and compared to the deltaGLM index used in the 2017
 assessment and the current recommended updated index in
@@ -1511,8 +1511,8 @@ approach.
 
 \subsection{Fishery-Independent Data}\label{fishery-independent-data}
 
-Two sources of fishery-independent data were updated: the West Coast
-Groundfish Bottom Trawl Survey and the \gls{iphc} Longline survey.
+Two sources of fishery-independent data were updated: the \gls{indexwc}
+and the \gls{iphc} Longline survey.
 
 \subsubsection{West Coast Groundfish Bottom Trawl Survey
 (WCGBTS)}\label{west-coast-groundfish-bottom-trawl-survey-wcgbts}
@@ -1565,66 +1565,59 @@ halibut off the coast of Oregon and Washington (\gls{iphc} area ``2A'')
 since 1997 (no surveys were performed in 1998 or 2000). Beginning in
 1999, this has been a fixed station design, with roughly 1,800 hooks
 deployed at each of 84 locations. Before 1999, station locations were
-not fixed, and, therefore, those years are not used in the index.
-Rockfish bycatch, mainly yelloweye, was recorded during this survey,
-although values for 1999 and 2001 are estimates based on subsampling the
-first 20 hooks of each 100-hook skate. The gear used to conduct this
-survey, while designed specifically to efficiently sample Pacific
-halibut, is similar to that used in some earlier line fisheries that
-targeted adult Yelloweye Rockfish. Some variability in exact sampling
-location is unavoidable, and leeway is given in the \gls{iphc} methods
-to center the set on the target coordinates but to allow wind and
-currents to dictate the actual direction in which the gear is deployed.
-This can result in different habitats accessed at each fixed location
-among years. The number of skates used can also differ from year to
-year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of
-effort for all years. This has been the standard effort used in past
-Yelloweye Rockfish stock assessments.
+not fixed, and thus, those years are not used in the index. Rockfish
+bycatch, primarily Yelloweye, were recorded during this survey, although
+values for 1999 and 2001 are estimates based on sub-sampling the first
+20 hooks of each 100-hook skate. The gear used to conduct this survey,
+while designed to sample Pacific Halibut, is similar to gear previously
+used in line fisheries targeting adult Yelloweye Rockfish. Some
+variability in sampling location is unavoidable due to wind and currents
+affecting gear deployment. This can result in different habitats
+accessed at each fixed location between years. The number of skates used
+can also differ from year to year; skates hauled (i.e., 100 hooks/skate)
+are thus used as the unit of effort for all years. This has been the
+standard effort used in past Yelloweye Rockfish stock assessments.
 
 New to this assessment is the consideration of eight additional survey
 stations (1527 to 1534) conducted in a collaborative effort between
-\gls{iphc} and \gls{wdfw} from 2007-2009, 2013-2019 and 2021-2023. These
-stations are arranged around \gls{iphc} station 1082 (one of the more
-notable stations to encounter Yelloweye Rockfish). Only the summer
-months are considered here to match the time of year sampled by the
-\gls{iphc} survey. Survey sets at the \gls{wdfw} stations used three
-skates with 100 hooks each for most years, except for 2021 - 2023, where
-a total of four skates were used. Like the \gls{iphc} survey, effort was
-standardized to 100 hooks/skate. These stations were integrated into the
-\gls{iphc} stations when calculating the index of abundance. The full
-survey used in this assessment combined all stations in Oregon and
-Washington into a single index. Data were first filtered to remove all
-depths with few or no encounters, and then we excluded stations that
-rarely encountered Yelloweye Rockfish (averaging less than one encounter
-a year). This left a total of 11 stations for analysis. Both filtering
-levels increased the percentage of encounters from an initial 11\% to
-80\%.
+\gls{iphc} and \gls{wdfw} from 2007 - 2009, 2013 - 2019 and 2021 - 2023.
+These stations are set around \gls{iphc} station 1082 due to high
+capture probability of Yelloweye. Only summer months are considered to
+match the time of year sampled by the \gls{iphc} survey. Survey sets at
+the \gls{wdfw} stations used three skates with 100 hooks each for most
+years, except for 2021 - 2023, where a total of four skates were used.
+Like the \gls{iphc} survey, effort was standardized to 100 hooks/skate.
+These stations were integrated into the \gls{iphc} stations when
+calculating the index of abundance. The full survey used in this
+assessment combined all stations in Oregon and Washington into a single
+index. Data were first filtered to remove all depths with few or no
+encounters, and then we excluded stations that rarely encountered
+Yelloweye Rockfish (averaging less than one encounter a year). This left
+a total of 11 stations for analysis. Both filtering levels increased the
+percentage of encounters from an initial 11\% to 80\%.
 
-A log-normal generalized linear model with a log link in the
-\gls{sdmtmb} R package (Anderson et al. 2024) was used to standardize
-the CPUE. Model selection using the Akaike Information Criteria for
-small samples (AICc) was conducted to select which variables were
-included in the model. The final model included year, station, and depth
-as explanatory variables. Diagnostic tools to ensure the model fit was
-satisfactory included checking whether the hessian matrix is positive
-definite, the presence of extreme eigenvalues, and if the non-linear
-minimizer suggests convergence. These diagnostics were conducted with
-the sanity function in the \gls{sdmtmb} package. The updated index is
-compared to the index used in 2017 in Figure~\ref{fig-IPHC_comparison}.
+A log-normal generalized linear model with a log link using \gls{sdmtmb}
+(Anderson et al. 2024) was used to standardize the CPUE. Model selection
+using AICc was conducted to select which variables were included in the
+model. The final model included year, station, and depth as explanatory
+variables. Acceptable diagnostics for the model were achieved, as
+evidenced by passing th sanity function in \gls{sdmtmb}. We compared the
+updated 2025 index to the 2017 index and found no change in trends
+(Figure~\ref{fig-IPHC_comparison}).
 
 \subsubsection{Fishery-Independent Length and Age
 Compositions}\label{fishery-independent-length-and-age-compositions}
 
 Updated length and age composition data were available for the two
-updated fishery-independent surveys. Compositional data from 2017
-through 2024 were updated for \gls{indexwc} were obtained using
-functions from the
+updated fishery-independent surveys. Composition data from 2017 through
+2024 were updated for \gls{indexwc} and were obtained using functions
+from the
 \href{https://github.com/pfmc-assessments/nwfscSurvey}{nwfscSurvey} R
 package (Wetzel, Johnson, and Hicks 2025). The \gls{iphc} survey
 compositional data were provided by \gls{wdfw}.
 
 A summary of sampling efforts (number of hauls and number of individual
-fish) in all surveys is provided in
+fish) in both surveys is provided in
 Table~\ref{tbl-sampling-effort-triennial} and
 Table~\ref{tbl-sampling-effort-nwfsc}. Updated year-specific length
 frequency distributions generated for each survey are shown in
@@ -1632,7 +1625,8 @@ Figure~\ref{fig-NWFSC_lencomps} and Figure~\ref{fig-IPHC_lencomps},
 respectively. Updated year-specific \gls{caal} frequencies for each
 survey are shown in Figure~\ref{fig-NWFSC_agecomps1} and
 Figure~\ref{fig-NWFSC_agecomps2} for the \gls{indexwc} and
-Figure~\ref{fig-IPHC_agecomps1} and Figure~\ref{fig-IPHC_agecomps2}.
+Figure~\ref{fig-IPHC_agecomps1} and Figure~\ref{fig-IPHC_agecomps2} for
+the \gls{iphc}.
 
 \subsection{Biological Parameters and
 Data}\label{biological-parameters-and-data}
@@ -1687,7 +1681,7 @@ estimated \(a = 7.21847\)*10\textsuperscript{-8} and \(b = 4.043\).
 \subsubsection{Natural Mortality}\label{natural-mortality}
 
 The 2025 base model used the 2017 assessment's initial value of natural
-Mortality (\(M\)) which was estimated based on Hamel (2015).
+Mortality (\(M = 0.044\)) which was estimated based on Hamel (2015).
 
 \subsection{Environmental and ecosystem
 data}\label{environmental-and-ecosystem-data}
@@ -2874,7 +2868,7 @@ Incl. & - & - & Incl. & - & Incl. & Incl. & 30 & -45583.4 & 91226.9 & 427.8 \\
 \begin{longtable}{l|rrrr}
 
 \caption{\label{tbl-sampling-effort-triennial}Summary of sampling effort
-within triennial survey, with total and yelloweye positive hauls
+within triennial survey, with total and Yelloweye positive hauls
 summarized by area.}
 
 \tabularnewline
@@ -2907,8 +2901,8 @@ summarized by area.}
 \begin{longtable}{l|rrrr}
 
 \caption{\label{tbl-sampling-effort-nwfsc}Summary of sampling effort
-within NWFSC trawl survey, with total and yelloweye positive hauls
-summarized by area.}
+within the WCGBTS, with total and Yelloweye positive hauls summarized by
+area.}
 
 \tabularnewline
 
@@ -4169,8 +4163,8 @@ implemented in sdmTMB), and the current ORBS index (sdmTMB).}
 }
 
 \caption{\label{fig-wcgbts_qq}Quantile-quantile plot for the sdmTMB
-model fit for the NWFSC West Coast Groundfish Bottom Trawl Survey
-(WCGBTS) index.}
+model fit for the West Coast Groundfish Bottom Trawl Survey (WCGBTS)
+index.}
 
 \end{figure}%
 
@@ -4182,8 +4176,8 @@ model fit for the NWFSC West Coast Groundfish Bottom Trawl Survey
 
 }
 
-\caption{\label{fig-wcgbtsindexcomparison}Comparison of the 2017 NWFSC
-West Coast Groundfish Bottom Trawl Survey (WCGBTS) and the current WCBTS
+\caption{\label{fig-wcgbtsindexcomparison}Comparison of the 2017 West
+Coast Groundfish Bottom Trawl Survey (WCGBTS) and the current WCBTS
 index of abundance.}
 
 \end{figure}%
@@ -4303,7 +4297,7 @@ age-at-length data for the IPHC (1 of 2).}
 }
 
 \caption{\label{fig-IPHC_agecomps2}Annual unsexed conditional
-age-at-length data for the IPHC (1 of 2).}
+age-at-length data for the IPHC (2 of 2).}
 
 \end{figure}%
 
