--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -18,7 +18,7 @@ This section is not required for an update assessment.
 
 ### Modeling Platform and Structure
 
-The assessment was updated to use the most recent version of Stock Synthesis 3 (Version 3.30.23.2 - available [online](https://github.com/nmfs-ost/ss3-source-code/releases/tag/v3.30.23.2)). Bridging between SS versions is discussed in Section @sec-changes. 
+The assessment was updated to use the most recent version of Stock Synthesis 3 (Version 3.30.23.2 - available [online](https://github.com/nmfs-ost/ss3-source-code/releases/tag/v3.30.23.2)). Bridging between SS versions is discussed in @sec-changes. 
 
 Briefly, the Yelloweye Rockfish model is a coastwide, single-sex, two-area model. California is Area 1, and Oregon and Washington are combined into Area 2; the areas are separated because of differences in potential exploitation rates by area over time. Yelloweye Rockfish composition data are primarily reported as both sexes combined, and therefore, the assessment used a single sex model to facilitate the use of all available data. Growth is assumed to be the same in both areas, though future benchmark assessments may want to re-evaluate this assumption if more spatially-explicit data become available. Both growth and initial recruitment parameters were estimated internally, while all other biological parameters were fixed. The modeling period starts in the first year of available catches from historical reconstructions (1889) and the stock is assumed to be at an unfished equilibrium prior to that time. No changes were made to the fleet structure of the model. Fishery removals were divided among seven area- and sector-specific fleets. Estimated discard mortality was added to landings and included in the model as fleet-specific total removals. Length compositions for discarded and retained fish were combined as well. Data weighting was done using the Francis method [@francis_data_2011]. More detailed information on the model structure and justification is available in @gertseva_stock_2017 and summarized in @tbl-model-config.
 
@@ -64,7 +64,7 @@ Additional variance was estimated and added to the input variance for all indice
 
 The base model had `r sum(mod_out$parameters$Phase > 0)` estimated parameters (tallied by type in @tbl-n-param). A single-sex growth curve was estimated (@fig-growth). Natural mortality was fixed at 0.044, as in the 2017 assessment. Unfished recruitment and the distribution of recruits between areas are estimated. Steepness of the stock-recruit relationship was fixed at 0.72, updated from the 2017 assessment which was fixed at 0.718. Estimating steepness was evaluated as a sensitivity. As is current practice, recruitment deviations during the "main" period (from `r mod_in$ctl$MainRdevYrFirst` to `r mod_in$ctl$MainRdevYrLast`) were forced to sum to zero and the bias adjustment ramp was updated (@fig-biasadj). 
 
-We extended the time blocks on catchability parameters to 2024 to encompass additional data. To best fit the index for the Oregon recreational fleet, an offset for catchability between the MRFFS and ORBS sampling time periods was estimated in the 2017 assessment. In order to estimate this parameter under current best practices, the float was set to 0 and the phase to 1.
+We extended the time blocks on catchability parameters to 2024 to encompass additional data. To best fit the index for the Oregon recreational fleet, an offset for catchability between the MRFFS and ORBS sampling time periods was estimated in the 2017 assessment. In order to estimate this parameter under current best practices, the float was set to 0 and the phase to 1. See @sec-fits for more information about the model fit to the index.
 
 All selectivities were assumed to be length-based and used a double-normal functional form. Selectivities for all fleets were estimated to be asymptotic (@fig-selex_allfleets), though selectivity for the California Onboard Observer CPUE was mirrored to the California recreational fleet. Selectivities were constant through time. Dome-shaped selectivity and various time blocks for specific fleets were explored in @gertseva_stock_2017 but not re-evaluated in this update assessment.   
 
