--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -551,22 +551,7 @@ reference_points_table |>
 
 {{< pagebreak >}}
 
-<!-- Table 21 states of nature -->
-```{r, 2, results = "asis"}
-#| label: tbl-es-decision-2
-#| warning: false
-#| echo: false
-#| tbl-cap: "Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in millions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
-#| tbl-pos: H
- table_decision(
-   list(mod_low_A, mod_base_A, mod_high_A)
- )
-
-```
-
-{{< pagebreak >}}
-
-<!-- Table 22 states of nature -->
+<!-- Table 21 OFL projections -->
 ```{r, results = "asis"}
 #| label: tbl-projections
 #| warning: false
@@ -606,6 +591,18 @@ projections_table |>
 cat("\n\\end{landscape}\n")
 ```
 
+{{< pagebreak >}}
 
+<!-- Table 22 states of nature -->
+```{r, 2, results = "asis"}
+#| label: tbl-es-decision-2
+#| warning: false
+#| echo: false
+#| tbl-cap: "Decision table with 10-year projections. 'Mgmt' refers to the three management scenarios (A) the default harvest control rule $P^* = 0.40$. In each case the 2025 and 2026 catches are fixed at the estimates provided by the GMT. The catch for the Washington recreational fleet is input in numbers so the GMT estimate was converted from 3.22 metric tons to 1.53 thousands of fish based on a mean weight of 2.105 kg estimated by SS3 for this fleet in 2024. The alternative states of nature ('Low', 'Base', and 'High' as discussed in the text) are provided in the columns, with Spawning Output ('Spawn', in millions of eggs) and Fraction of unfished spawning output ('Frac') provided for each state."
+#| tbl-pos: H
+ table_decision(
+   list(mod_low_A, mod_base_A, mod_high_A)
+ )
 
-\pagebreak
+```
+
