update index figures, remove unnecessary ones and log fit of OR rec

--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -99,7 +99,7 @@ The \gls{orbs} dockside index for Oregon was updated for this assessment. CPUE, 
 
 The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to \gls{orbs} trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% (@tbl-yelloweye_percent_pos_ORBS).
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port, and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series (@tbl-yelloweye_model_selection_ORBS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0) [@Anderson_2024_SRP]. To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port, and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series (@tbl-yelloweye_model_selection_ORBS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0) [@Anderson_2024_SRP]. To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
 
 ## Fishery-Independent Data
 
@@ -111,7 +111,7 @@ The \gls{indexwc} survey methods are most recently described in detail in @kelle
 
 The final model used a delta model with a lognormal distribution for the catch-rate component. A logit-link was used for encounter probability and a log-link for positive catch rates. The response variable was catch (mt) with an offset of area swept (km^2^) to account for differences in effort. Fixed effects were estimated for each year and pass. The index was estimated for the area north of 42 degrees North (Oregon and Washington) to be consistent with the previous assessment. The data were truncated to depths shallower than 325 m prior to modeling given that there were zero positive encounters in depths deeper than 325 m. The prediction grid was also truncated to only include available survey locations in depths between 55-325 m to limit extrapolating beyond the data and edge effects. Spatial variation was included in the encounter probability and the positive catch rate model. Spatial variation was approximated using 200 knots, where more knots led to non-estimable standard errors because the positive encounters are too sparse to support the dense spatiotemporal structure. Anisotropy was not estimated.
 
-The biomass estimates produced for this assessment using \gls{sdmtmb} are comparable to the biomass estimates produced in the previous benchmark assessment (@fig-wcgbtsindexcomparison). The index is relatively flat with a peak in 2014, but variation is high throughout the time series (@fig-wcgbtsindex).
+The biomass estimates produced for this assessment using \gls{sdmtmb} are comparable to the biomass estimates produced in the previous benchmark assessment (@fig-wcgbtsindexcomparison). The index is relatively flat with a peak in 2014, but variation is high throughout the time series.
 
 ### IPHC Setline Survey
 
