--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -16,7 +16,7 @@ This assessment estimates that the 2024 SPR is `r (1-(round(mod_out$derived_quan
 
 ## Harvest Projections and Decision Tables
 
-The base model estimate for 2025 spawning depletion is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`%. The primary axis of uncertainty about this estimate used in the decision table was based on natural mortality. Natural mortality in the assessment model is fixed at the median of the Hamel prior (0.044 y-1), estimated using the maximum age of 123 years. Natural mortality value for high state of nature was calculated to correspond to 97 years of age, which is the 99th percentile of the age data available for the assessment; this value was 0.056 y-1. The natural mortality value for low state of nature was calculated to correspond to 147 years of age, which is the maximum age reported for the Yelloweye Rockfish; this value was 0.037 y-1.
+The base model estimate for 2025 spawning depletion is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% (@tbl-projections). The primary axis of uncertainty about this estimate used in the decision table was based on natural mortality. Natural mortality in the assessment model is fixed at the median of the Hamel prior (0.044 y-1), estimated using the maximum age of 123 years. Natural mortality value for high state of nature was calculated to correspond to 97 years of age, which is the 99th percentile of the age data available for the assessment; this value was 0.056 y-1. The natural mortality value for low state of nature was calculated to correspond to 147 years of age, which is the maximum age reported for the Yelloweye Rockfish; this value was 0.037 y-1.
 
 Twelve-year forecasts for each state of nature were calculated (@tbl-es-decision-2).
 
